@@ -1,3 +1,5 @@
+## This configuration is ignored as of TYPO3 10
+
 config.tx_extbase {
 	persistence {
 		classes {
